0.21.4 - Apply patch from Neil Katin - RT#43890
       - Apply patch from Jason Smith - RT#46480
       - Apply patch from Jason Smith - RT#46487
       - Apply patch from Jason Smith - RT#46493
       - Apply patch from Jason Smith - RT#46495
       - Apply patch from Jason Smith - RT#46497
0.21.5 - Rerelease to pick up missing test files
0.21.6 - Apply patch from 'PAYERLE' - RT#47781
0.21.7 - Apply patch from PJNewman - RT#47912
       - Apply patch from Neil Katin - RT#48282
       - Run 'perltidy -pbp' across all perl code
0.21.8 - Apply speedup patch for v2 to v3 from PJNewman's patch (RT#47912)
       - Apply patch from Stephen Gran to add in more missing methods (RT#49411)
0.21.9 - Fixed speedup patch using logic similar to Nagios' for parsing status.dat
       - Added more comprehensive test for parsing status file
0.21.10 - Fixed test failure on Perl 5.11 (RT #54464)
0.21.11 - Added repository, bugtracker and homepage resources
0.21.12 - Fixed continuation line handling - Thanks to payerle (RT#58906)
0.21.13 - Fixed parsing of ServiceEscalation, ServiceDependency and HostEscalation types.  Thanks to PIRZYK (RT#63802)  
        - Fixed host_name and hostgroup_name methods in various objects. Thanks to PIRZYK (RT#63805)
        - Improve find_object performance.  Thanks to PIRZYK (RT#63803)
        - Allow for nested group membership. Thanks to PIRZYK (RT#63804)
        - Ensure host membership lists are consistent. Thanks to PIRZYK (RT#63808)
        - Allow for name() method to not be unique on service objects.  Thanks to PIRZYK (RT#63806)
0.21.14 - Re-release to include extra test files missed previously
0.21.15 - Fixed timeperiod in host type should not be an Array.  Thanks to PIRZYK (RT#66347)
        - Fixed notes field does not support having a ';' in it.   Thanks to PIRZYK (RT#66348)
0.21.16 - Fixed undefined variable when parsing service comments
        - Ensure 'ref' is used as a function call correctly.  Thanks to Patrik Mueller