@@ -121,3 +121,4 @@
         - Fixed notes field does not support having a ';' in it.   Thanks to PIRZYK (RT#66348)
 0.21.16 - Fixed undefined variable when parsing service comments
         - Ensure 'ref' is used as a function call correctly.  Thanks to Patrik Mueller
+        - Cater for recursive includes in configuration files.  Thanks to Michael Fladischer (RT#71017)
